--- a/TFG_UO270235/public/index.html
+++ b/TFG_UO270235/public/index.html
@@ -5,17 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="María González Otero TFG"
-    />
+    <meta name="description" content="María González Otero TFG" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href='https://cdn.jsdelivr.net/npm/yashe/dist/yashe.min.css' rel='stylesheet' type='text/css'/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/yashe/dist/yashe.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/yashe/dist/yashe.bundled.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom-container@0.5.1"></script>
-    <title>React App</title>
+    <title>RDF Visualizer</title>
   </head>
   <body>
     <div id="root"></div>
